Fixed radio && add fileInput

--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
     ],
     "require": {
         "yiisoft/yii2": "*",
+        "yiisoft/yii2-jui": "*",
         "bower-asset/metro-ui-css": "2.*"
     },
     "autoload": {
