--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
     "require": {
         "yiisoft/yii2": "*",
         "yiisoft/yii2-jui": "*",
-        "bower-asset/metro-ui-css": "2.*"
+        "bower-asset/metro-ui-css": "2.*",
+        "bower-asset/x-editable": "*"
     },
     "autoload": {
         "psr-4": {
